<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.doctorBudget.Activities.UserActivity">


    <TextView
        android:id="@+id/txt_view_new_user_title"
        android:layout_width="372dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_view_new_user_title"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_view_required_lstNme"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_view_star"
        android:textAlignment="textStart"
        android:textColor="#BF2525"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_txt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_last_name"
        android:padding="12dp" />

    <TextView
        android:id="@+id/txt_view_required_fstNme"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_view_star"
        android:textAlignment="textStart"
        android:textColor="#BF2525"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_txt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_first_name"
        android:padding="12dp" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edt_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_email"
        android:padding="12dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edt_txt_birthDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_bday"
        android:padding="12dp"
        android:inputType="date"/>
    <TextView
        android:id="@+id/txt_view_required_country"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_view_star"
        android:textAlignment="textStart"
        android:textColor="#BF2525"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_view_ChooseCountry"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:padding="7dp"
        android:text="@string/hint_country"
        android:textAlignment="textStart"
        android:textColor="#AAA5A5"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_Country"
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <EditText
        android:id="@+id/edt_txt_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_occupation"
        android:padding="12dp" />


    <ImageView

        android:id="@+id/img_profile_user_upload"
        android:layout_width="149dp"
        android:layout_height="114dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_account_circle" />

    <Button
            android:id="@+id/btn_add_user"
            android:layout_width="245dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:text="@string/btn_add" />


</LinearLayout>
