<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/txt_view_upd_last_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/hint_last_name"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_txt_last_name_upd"
        android:hint="Entre text"
        android:padding="12dp"
        android:lines="1"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <TextView
        android:id="@+id/txt_view_up_first_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/hint_first_name"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_txt_first_name_upd"
        android:hint="Entre text"
        android:padding="12dp"
        android:lines="1"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <TextView
        android:id="@+id/txt_view_email_upd"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/hint_email"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_txt_email_upd"
        android:hint="Entre text"
        android:padding="12dp"
        android:lines="1"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <TextView
        android:id="@+id/txt_view_occupation_upd"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/hint_occupation"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_txt_occupation_upd"
        android:hint="Entre text"
        android:padding="12dp"
        android:lines="1"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="30dp"
            android:text="@string/btn_update">

        </Button>

        <Button
            android:id="@+id/btn_cancel_update"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_cancel">

        </Button>


    </LinearLayout>




</LinearLayout>