<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.doctorBudget.Activities.FinaceSourceActivity">

    <TextView
        android:id="@+id/txt_view_config_finance_source"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_view_config_finance_source"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_view_required_pfs_name"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_view_star"
        android:textAlignment="textStart"
        android:textColor="#BF2525"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_txt_pfs_name"
        android:layout_width="336dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_pers_finance_source_name"
        android:padding="5dp"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/txt_view_required_pfs_category"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_view_star"
        android:textAlignment="textStart"
        android:textColor="#BF2525"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_view_choose_pfsc"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_view_pfs_category"
        android:textAlignment="center"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radio_grp_pfs_cat"
        android:layout_width="156dp"
        android:layout_height="152dp"
        android:layout_marginStart="55dp">

        <RadioButton
            android:id="@+id/rdo_pfs_cash"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:text="psf1"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rdo_pfs_dbt_card"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:text="psf2"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rdo_pfs_meal_tkt"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:text="psf3"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rdo_pfs_crd_card"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:text="psf4"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rdo_pfs_others"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:text="psf5"
            android:textSize="16dp" />


    </RadioGroup>

    <EditText
        android:id="@+id/edt_txt_pfs_note"
        android:layout_width="333dp"
        android:layout_height="80dp"
        android:layout_marginStart="35dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_pers_finance_source_notice"
        android:inputType="textMultiLine"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_add_pfs"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_add_pfs" />

    <Button
        android:id="@+id/btn_update_pfs"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_update"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_personal_finance_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        tools:listitem="@layout/list_row_basic" />

</LinearLayout>